--- a/privacy.html
+++ b/privacy.html
@@ -52,33 +52,274 @@
 
     <main>
       <article>
-        <h2>Subtitle</h2>
+        <h2>PRIVACY POLICY</h2>
+        Last updated August 07, 2023
+        This privacy notice for Join ('Company', 'we', 'us', or 'our'), describes how and why we might collect, store,
+        use, and/or share ('process') your information when you use our services ('Services'), such as when you:
+        Download and use our mobile application (JOIN), or any other application of ours that links to this privacy
+        notice.
+        Engage with us in other related ways, including any sales, marketing, or events
+        Questions or concerns? Reading this privacy notice will help you understand your privacy rights and choices. If
+        you
+        do not agree with our policies and practices, please do not use our Services. If you still have any questions or
+        concerns, please contact us at
+      </article>
+      <article>
+        <h2> SUMMARY OF KEY POINTS</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Pellentesque odio felis, iaculis ut massa eget, ornare lacinia urna.
-          In dignissim justo eu velit sagittis, in scelerisque nulla
-          convallis. Vestibulum eros lorem, sollicitudin eget eros non, varius
-          aliquam mauris. Sed turpis ipsum, condimentum quis nulla at,
-          lobortis facilisis ipsum. Nunc erat justo, hendrerit vel enim vitae,
-          feugiat mattis dui. In auctor dignissim luctus. Mauris ornare ipsum
-          at ultrices eleifend. Praesent tempus congue magna. Quisque libero
-          erat, pharetra a neque et, imperdiet semper justo.
+          <b>This summary provides key points from our privacy notice, but you can find out more details about any of these
+          topics by clicking the link following each key point or by using our <a href="#toc">table of contents</a>  below to find the
+          section you are looking for.</b> <br> <br>
+          <b>What personal information do we process?</b> When you visit, use, or navigate our Services, we may process
+          personal information depending on how you interact with Join and the Services, the choices you make, and the products
+          and features you use. Learn more about <a href="#personalinfo">personal information you disclose to us</a>. <br> <br>
+          <b>Do we process any sensitive personal information?</b>We do not process sensitive personal information. <br> <br>
+          <b>Do we receive any information from third parties?</b> We do not receive any information from third parties. <br> <br>
+          <b>How do we process your information?</b> We process your information to provide, improve, and administer our <br> <br>
+          Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process
+          your information for other purposes with your consent. We process your information only when we have a valid
+          legal reason to do so. Learn more about how we process your information. <br> <br>
+          <b>In what situations and with which parties do we share personal information?</b> We may share information in
+          specific
+          situations and with specific third parties. Learn more about when and with whom we share your personal
+          information. <br> <br>
+          <b>What are your rights?</b> Depending on where you are located geographically, the applicable privacy law may mean
+          you
+          have certain rights regarding your personal information. Learn more about your privacy rights. <br> <br>
+          <b>How do you exercise your rights?</b> The easiest way to exercise your rights is by submitting a data subject
+          access
+          request, or by contacting us. We will consider and act upon any request in accordance with applicable data
+          protection laws. <br> <br>
+          <b>Want to learn more about what Join does with any information we collect?</b> Review the privacy notice in full. <br> <br>
         </p>
       </article>
       <article>
-        <h2>Subtitle</h2>
+        <h2 id="toc"> TABLE OF CONTENTS</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Pellentesque odio felis, iaculis ut massa eget, ornare lacinia urna.
-          In dignissim justo eu velit sagittis, in scelerisque nulla
-          convallis. Vestibulum eros lorem, sollicitudin eget eros non, varius
-          aliquam mauris. Sed turpis ipsum, condimentum quis nulla at,
-          lobortis facilisis ipsum. Nunc erat justo, hendrerit vel enim vitae,
-          feugiat mattis dui. In auctor dignissim luctus. Mauris ornare ipsum
-          at ultrices eleifend. Praesent tempus congue magna. Quisque libero
-          erat, pharetra a neque et, imperdiet semper justo.
+        <ol>
+          <li><a href="#one">WHAT INFORMATION DO WE COLLECT?</a></li>
+          <li><a href="#two">HOW DO WE PROCESS YOUR INFORMATION?</a></li>
+          <li><a href="#three">WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION?</a></li>
+          <li><a href="#four">WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</a></li>
+          <li><a href="#five">HOW LONG DO WE KEEP YOUR INFORMATION?</a></li>
+          <li><a href="#six">DO WE COLLECT INFORMATION FROM MINORS?</a></li>
+          <li><a href="#seven">WHAT ARE YOUR PRIVACY RIGHTS?</a></li>
+          <li><a href="#eight">CONTROLS FOR DO-NOT-TRACK FEATURES</a></li>
+          <li><a href="#nine">DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a></li>
+          <li><a href="#ten">DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
+          <li><a href="#eleven">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
+          <li><a href="twelve">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a></li>
+        </ol>
         </p>
       </article>
+      <article>
+        <h2 id="one"> 1. WHAT INFORMATION DO WE COLLECT?</h2>
+        <p>
+          <b id="personalinfo">Personal information you disclose to us</b> <br>
+          In Short: We collect personal information that you provide to us. <br> <br>
+          We collect personal information that you voluntarily provide to us when you express an interest in obtaining
+          information about us or our products and Services, when you participate in activities on the Services, or
+          otherwise when you contact us.
+          Personal Information Provided by You. The personal information that we collect depends on the context of your
+          interactions with us and the Services, the choices you make, and the products and features you use. The
+          personal
+          information we collect may include the following:
+          <ul>
+            <li>usernames</li>
+            <li>passwords</li>
+            <li>email addresses</li>
+          </ul>
+          Sensitive Information. We do not process sensitive information.
+          All personal information that you provide to us must be true, complete, and accurate, and you must notify us
+          of
+          any changes to such personal information.
+        </p>
+      </article>
+      <article>
+        <h2 id="two"> 2. HOW DO WE PROCESS YOUR INFORMATION?</h2>
+        <p>
+          In Short: We process your information to provide, improve, and administer our Services, communicate with you,
+          for security and fraud prevention, and to comply with law. We may also process your information for other
+          purposes with your consent. <br> <br>
+          We process your personal information for a variety of reasons, depending on how you interact with our
+          Services,
+          including:
+          <ul>
+            <li>
+              To save or protect an individual's vital interest. We may process your information when necessary to save or
+          protect an individual's vital interest, such as to prevent harm.
+            </li>
+          </ul>
+        </p>
+        <article>
+          <h2 id="three"> 3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR INFORMATION?</h2>
+          <p>
+            In Short: We only process your personal information when we believe it is necessary and we have a valid
+            legal reason (i.e. legal basis) to do so under applicable law, like with your consent, to comply with laws, to
+            provide you with services to enter into or fulfil our contractual obligations, to protect your rights, or to fulfil
+            our legitimate business interests. <br> <br>
+            The General Data Protection Regulation (GDPR) and UK GDPR require us to explain the valid legal bases we
+            rely on in order to process your personal information. As such, we may rely on the following legal bases to process
+            your personal information:
+          <ul>
+            <li>Consent: <br> We may process your information if you have given us permission (i.e. consent) to use your
+              personal information for a specific purpose. You can withdraw your consent at any time. Learn more about
+              withdrawing
+              your consent.
+            </li>
+            <li>Legal Obligations: <br>We may process your information where we believe it is necessary for compliance
+              with
+              our legal obligations, such as to cooperate with a law enforcement body or regulatory agency, exercise or
+              defend
+              our legal rights, or disclose your information as evidence in litigation in which we are involved.
+            </li>
+            <li>Vital Interests: <br>We may process your information where we believe it is necessary to protect your
+              vital
+              interests or the vital interests of a third party, such as situations involving potential threats to the
+              safety of any person.
+            </li>
+          </ul>
+          </p>
+        </article>
+
+      </article>
+      <article>
+        <h2 id="four"> 4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h2>
+        <p>
+          In Short: We may share information in specific situations described in this section and/or with the following
+          third parties. <br> <br>
+          We may need to share your personal information in the following situations:
+        <ul>
+          <li>Business Transfers: <br> We may share or transfer your information in connection with, or during
+            negotiations of,
+            any merger, sale of company assets, financing, or acquisition of all or a portion of our business to another
+            company.
+          </li>
+        </ul>
+        </p>
+      </article>
+      <article>
+        <h2 id="five">5. HOW LONG DO WE KEEP YOUR INFORMATION?</h2>
+        <p>
+          In Short: We keep your information for as long as necessary to fulfil the purposes outlined in this privacy
+          notice unless otherwise required by law. <br> <br>
+          We will only keep your personal information for as long as it is necessary for the purposes set out in this
+          privacy notice, unless a longer retention period is required or permitted by law (such as tax, accounting, or
+          other legal requirements).
+          When we have no ongoing legitimate business need to process your personal information, we will either delete
+          or anonymise such information, or, if this is not possible (for example, because your personal information has
+          been stored in backup archives), then we will securely store your personal information and isolate it from any
+          further processing until deletion is possible.
+        </p>
+      </article>
+      <article>
+        <h2 id="six">6. DO WE COLLECT INFORMATION FROM MINORS?</h2>
+        <p>
+          In Short: We do not knowingly collect data from or market to children under 18 years of age. <br> <br>
+          We do not knowingly solicit data from or market to children under 18 years of age. By using the Services, you
+          represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such
+          minor dependent's use of the Services. If we learn that personal information from users less than 18 years of
+          age has been collected, we will deactivate the account and take reasonable measures to promptly delete such
+          data
+          from our records. If you become aware of any data we may have collected from children under age 18, please
+          contact us at join@join.join.
+        </p>
+      </article>
+      <article>
+        <h2 id="seven">7. WHAT ARE YOUR PRIVACY RIGHTS?</h2>
+        <p>
+          In Short: In some regions, such as the European Economic Area (EEA) and United Kingdom (UK), you have rights
+          that allow you greater access to and control over your personal information. You may review, change, or
+          terminate your account at any time. <br> <br>
+          In some regions (like the EEA and UK), you have certain rights under applicable data protection laws. These
+          may
+          include the right (i) to request access and obtain a copy of your personal information, (ii) to request
+          rectification or erasure; (iii) to restrict the processing of your personal information; and (iv) if
+          applicable,
+          to data portability. In certain circumstances, you may also have the right to object to the processing of your
+          personal information. You can make such a request by contacting us by using the contact details provided in
+          the
+          section 'HOW CAN YOU CONTACT US ABOUT THIS NOTICE?' below.
+          We will consider and act upon any request in accordance with applicable data protection laws.
+          If you are located in the EEA or UK and you believe we are unlawfully processing your personal information,
+          you
+          also have the right to complain to your Member State data protection authority or UK data protection
+          authority. <br>
+          If you are located in Switzerland, you may contact the Federal Data Protection and Information Commissioner.
+          Withdrawing your consent: If we are relying on your consent to process your personal information, you have the
+          right to withdraw your consent at any time. You can withdraw your consent at any time by contacting us by
+          using
+          the contact details provided in the section 'HOW CAN YOU CONTACT US ABOUT THIS NOTICE?' below.
+          However, please note that this will not affect the lawfulness of the processing before its withdrawal nor,
+          will
+          it affect the processing of your personal information conducted in reliance on lawful processing grounds other
+          than consent.
+        </p>
+      </article>
+      <article>
+        <h2 id="eight">8. CONTROLS FOR DO-NOT-TRACK FEATURES</h2>
+        <p>
+          Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track ('DNT')
+          feature or setting you can activate to signal your privacy preference not to have data about your online
+          browsing activities monitored and collected. At this stage no uniform technology standard for recognising and
+          implementing DNT signals has been finalised. As such, we do not currently respond to DNT browser signals or
+          any other mechanism that automatically communicates your choice not to be tracked online. If a standard for
+          online
+          tracking is adopted that we must follow in the future, we will inform you about that practice in a revised
+          version of this privacy notice.
+        </p>
+      </article>
+      <article>
+        <h2 id="nine">9. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h2>
+        <p>
+          In Short: Yes, if you are a resident of California, you are granted specific rights regarding access to your
+          personal information. <br> <br>
+          California Civil Code Section 1798.83, also known as the 'Shine The Light' law, permits our users who are
+          California residents to request and obtain from us, once a year and free of charge, information about
+          categories
+          of personal information (if any) we disclosed to third parties for direct marketing purposes and the names and
+          addresses of all third parties with which we shared personal information in the immediately preceding calendar
+          year. If you are a California resident and would like to make such a request, please submit your request in
+          writing to us using the contact information provided below.
+          If you are under 18 years of age, reside in California, and have a registered account with Services, you have
+          the right to request removal of unwanted data that you publicly post on the Services. To request removal of
+          such
+          data, please contact us using the contact information provided below and include the email address associated
+          with your account and a statement that you reside in California. We will make sure the data is not publicly
+          displayed on the Services, but please be aware that the data may not be completely or comprehensively removed
+          from all our systems (e.g. backups, etc.).
+        </p>
+      </article>
+      <article>
+        <h2 id="ten">10. DO WE MAKE UPDATES TO THIS NOTICE?</h2>
+        <p>
+          In Short: Yes, we will update this notice as necessary to stay compliant with relevant laws. <br> <br>
+          We may update this privacy notice from time to time. The updated version will be indicated by an updated
+          'Revised' date and the updated version will be effective as soon as it is accessible. If we make material
+          changes to this privacy notice, we may notify you either by prominently posting a notice of such changes or by
+          directly sending you a notification. We encourage you to review this privacy notice frequently to be informed
+          of
+          how we are protecting your information.
+        </p>
+      </article>
+      <article>
+        <h2 id="eleven">11. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h2>
+        <p>
+          If you have questions or comments about this notice, you may email us at
+          or contact us by post at:
+          Join@join.join.
+        </p>
+      </article>
+      <article>
+        <h2 id="twelve">12. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</h2>
+        <p>
+          Based on the applicable laws of your country, you may have the right to request access to the personal
+          information we collect from you, change that information, or delete it. To request to review, update, or
+          delete your personal information, please fill out and submit a data subject access request.
+          This privacy policy was created using Termly's Privacy Policy Generator. <br> <br>
+        </p>
+      </article>
+
     </main>
   </div>
 </body>
