correcting small error

--- a/privacy.html
+++ b/privacy.html
@@ -108,7 +108,7 @@
           <li><a href="#nine">DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a></li>
           <li><a href="#ten">DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
           <li><a href="#eleven">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
-          <li><a href="twelve">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a></li>
+          <li><a href="#twelve">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a></li>
         </ol>
         </p>
       </article>
