--- a/board.html
+++ b/board.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="./styles/summary.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/board.css"/>
+    <link rel="stylesheet" href="./styles/coloris.min.css" />
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/board.js"></script>
     <!-- <script defer src="./scripts/summary.js"></script> -->
@@ -59,7 +60,7 @@
     <div w3-include-html="./templates/sidebar.html"></div>
 
     <div class="modal-backdrop modal">
-      <form onsubmit="addTask();" class="popUpBoardTask">
+      <form onsubmit="addTask(); return false" class="popUpBoardTask">
         <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose" onclick="closeModal(document.querySelector('.modal'))">
         <button onclick="getAssignedContacts()" type="submit"
         class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg xmlns="http://www.w3.org/2000/svg"
