added redirection from addTask Template on Board to addTask.html if the width is smaller than 950

--- a/board.html
+++ b/board.html
@@ -75,7 +75,7 @@
           <div class="top-left">
             <label class="font20 label" for="title">Title</label>
             <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border ol-none cursor-p"
-              type="text" placeholder="Enter a title">
+              type="text" placeholder="Enter a title - HEY" >
     
             <label class="font20 label" for="description">Description</label>
             <textarea required class="w-422 font20 pad-18-21 custom-border ol-none cursor-p" name="description"
