--- a/board.html
+++ b/board.html
@@ -60,7 +60,7 @@
     <div w3-include-html="./templates/sidebar.html"></div>
 
     <div class="modal-backdrop modal">
-      <form onsubmit="addTask(); return false" class="popUpBoardTask">
+      <form onsubmit="addTask(); return false" class="popUpBoardTask add-task-form-bord">
         <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose" onclick="closeModal(document.querySelector('.modal'))">
         <button onclick="getAssignedContacts()" type="submit"
         class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg xmlns="http://www.w3.org/2000/svg"
