refactored login.js and created util.js

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <!-- <script src="./scripts/sidebar.js"></script> -->
-    <script src="./scripts/bootstrap.js"></script>
-    <script src="./scripts/storage.js"></script>
+    <script defer src="./scripts/bootstrap.js"></script>
+    <script defer src="./scripts/storage.js"></script>
+    <script defer src="./scripts/utils.js"></script>
+    <script defer src="./scripts/login.js"></script>
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/index.css" />
     <title>JOIN</title>
@@ -125,7 +127,5 @@
         <a>Legal Notice</a>
       </footer>
     </main>
-
-    <script src="./scripts/login.js"></script>
   </body>
 </html>
