fixed some script issus and added addTask-todo on Board

--- a/board.html
+++ b/board.html
@@ -238,7 +238,7 @@
           <div class="d-flex justify-content-between">
             <div class="bold boardCategoryHeadline">To do</div>
             <div class="cursorPointer">
-              <img src="./img/plusButton.svg" alt="plus" />
+              <img src="./img/plusButton.svg" alt="plus" onclick="addTaskByStatus('to do')"/>
             </div>
           </div>
           <div
@@ -254,7 +254,7 @@
           <div class="d-flex justify-content-between">
             <div class="bold boardCategoryHeadline">In Progress</div>
             <div class="cursorPointer">
-              <img src="./img/plusButton.svg" alt="plus" onclick="addTaskByStatus('in progress');"/>
+              <img src="./img/plusButton.svg" alt="plus" onclick="addTaskByStatus('in progress')"/>
             </div>
           </div>
           <div
@@ -270,7 +270,7 @@
           <div class="d-flex justify-content-between">
             <div class="bold boardCategoryHeadline">Awaiting Feedback</div>
             <div class="cursorPointer">
-              <img src="./img/plusButton.svg" alt="plus" onclick="addTaskByStatus('awaiting feedback');"/>
+              <img src="./img/plusButton.svg" alt="plus" onclick="addTaskByStatus('awaiting feedback')"/>
             </div>
           </div>
           <div
