fix: blowout grid added min-height & min-width: 0 within new class of .griditems font-size, contact-icons and prio-icon smaller styling of cardText new media query of min: 871 and max 1200

--- a/board.html
+++ b/board.html
@@ -234,7 +234,7 @@
         </div>
       </div>
       <div class="gridContainerChildBoard">
-        <div>
+        <div class="grid-items">
           <div class="d-flex justify-content-between">
             <div class="bold boardCategoryHeadline">To do</div>
             <div class="cursorPointer">
@@ -250,7 +250,7 @@
             status="to do"
           ></div>
         </div>
-        <div>
+        <div class="grid-items">
           <div class="d-flex justify-content-between">
             <div class="bold boardCategoryHeadline">In Progress</div>
             <div class="cursorPointer">
@@ -266,7 +266,7 @@
             status="in progress"
           ></div>
         </div>
-        <div>
+        <div class="grid-items">
           <div class="d-flex justify-content-between">
             <div class="bold boardCategoryHeadline">Awaiting Feedback</div>
             <div class="cursorPointer">
@@ -282,7 +282,7 @@
             status="awaiting feedback"
           ></div>
         </div>
-        <div>
+        <div class="grid-items">
           <div class="bold boardCategoryHeadline">Done</div>
           <div
             ondrop="moveTo('done', this)"
