--- a/summary.html
+++ b/summary.html
@@ -41,7 +41,7 @@
     <div class="summary-content">
       <main>
         <div class="main-top">
-          <div class="task-boad custom-border" onclick="redirect('board.html')">
+          <div class="task-board custom-border" onclick="redirect('board.html')">
             <div class="font-64" id="task-count">
               0
             </div>
