rewrote summary.html + added responsiveness to it 760px and less

--- a/summary.html
+++ b/summary.html
@@ -15,11 +15,12 @@
   <meta name="msapplication-config" content="/img/favicon/browserconfig.xml" />
   <meta name="theme-color" content="#ffffff" />
   <!-- FAVICON END -->
-  <link rel="stylesheet" href="./styles/fonts.css" />
-  <link rel="stylesheet" href="./styles/styleSidebar.css" />
-  <link rel="stylesheet" href="./styles/summary.css" />
-  <script src="./scripts/summary.js"></script>
-  <script src="./scripts/sidebar.js"></script>
+  <link rel="stylesheet" href="styles/bootstrap.css">
+  <link rel="stylesheet" href="styles/fonts.css" />
+  <link rel="stylesheet" href="styles/styleSidebar.css" />
+  <link rel="stylesheet" href="styles/summary.css" />
+  <script src="scripts/summary.js"></script>
+  <script src="scripts/sidebar.js"></script>
   <script src="scripts/storage.js"></script>
 
   <title>Summary</title>
@@ -87,7 +88,7 @@
             </div>
           </div>
           <div class="done custom-border" onclick="redirect('board.html')" onmouseover="whiteOk()" onmouseout="darkOk()">
-            <img id="ok" src="./img/icon_ok.svg" alt="ok"/>+
+            <img id="ok" src="./img/icon_ok.svg" alt="ok"/>
             <div class="done-content">
               <div class="font-61" id="done-count">0</div>
               <span class="font-20">Done</span>
