--- a/contacts.html
+++ b/contacts.html
@@ -82,6 +82,7 @@
     </div>
   </dialog>
 
+  <!-- // Test // -->
   <!-- Add new Contact -->
   <dialog class="resp-none" id="dialog__createContact">
     <button class="btn-resp-x" onclick="cancelCreateContact()">
