integrating showTopDown(message)

--- a/contacts.html
+++ b/contacts.html
@@ -43,6 +43,7 @@
   <script src="./scripts/sidebar.js"></script>
   <script src="./scripts/authenticate.js"></script>
   <script src="./scripts/storage.js"></script>
+  <script src="./scripts/utils.js"></script>
   <link rel="icon" href="./img/logo_dark.png" />
   <title>Contacts</title>
 </head>
@@ -216,10 +217,6 @@
 
   <div class="background-dialog d-none" onclick="closeDialog(); closeResponsiveOptions()">
 
-  </div>
-
-  <div id="contacts-btn-container" class="addContact resp-none">
-    <button class="add-to-contacts-btn">Contact created</button>
   </div>
 
   <script src="./scripts/contacts.js"></script>
