fixed responsive popupboardtask

--- a/board.html
+++ b/board.html
@@ -175,7 +175,7 @@
   <div id="popUpBoard" class="dNone popUpBoardBackground display-flex justify-content-center align-items-center"></div>
   <div class="parentDiv">
     <div class="d-flex justify-content-between mb-5 headline-container-board">
-      <div class="size3Em bold headlineBoard">
+      <div class="font-61 size3Em bold headlineBoard">
         Board
         <img src="./img/plus_add_task_board_mobile.svg" alt="Add a Task on Mobile Device"
           onclick="openModal(document.querySelector('.modal'))" class="mobileAddTask" />
