added defer to script tags

--- a/board.html
+++ b/board.html
@@ -27,7 +27,7 @@
   <script defer src="./scripts/board.js"></script>
   <!-- <script defer src="./scripts/summary.js"></script> -->
   <script defer src="./scripts/sidebar.js"></script>
-  <script src="./scripts/addtask.js"></script>
+  <script defer src="./scripts/addtask.js"></script>
   <script defer src="./scripts/animations.js"></script>
   <script defer src="./scripts/bootstrap.js"></script>
 
