--- a/contacts.html
+++ b/contacts.html
@@ -101,19 +101,19 @@
       <div class="dialog__createRightImg">
         <img src="./img/create_contact_frame.svg" alt="no user photo" />
       </div>
-      <form id="createContactForm" class="dialog__createRightForm" onsubmit="return false;">
-        <input required type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
-        <input type="text" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
-        <input type="text" placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
+      <form id="createContactForm" class="dialog__createRightForm" onsubmit="addNewContact(); return false;">
+        <input required minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
+        <input required type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
+        <input type="number" placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
         <div class="dialog__createRightBtn">
           <button type="button" class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
             Cancel X
           </button>
-          <button class="custom-btn btn-hover btn-save" id="dialog__createSaveBtn" onclick="addNewContact()">
+          <button type="submit" class="custom-btn btn-hover btn-save" id="dialog__createSaveBtn">
             Save
           </button>
 
-          <button class="btn-resp-create custom-btn" onclick="addNewContact()">
+          <button type="submit" class="btn-resp-create custom-btn">
             <span>Create Contact</span>
             <img src="./img/icon_check.png" alt="check">
           </button>
